# HIIK-Helper

./: .gitignore  found_articles.json  pyproject.toml  run-article-extractor.sh  scrapy.cfg  visited_urls.json
hiik_helper/: article_generator.py  article_generator_script.py  items.py  main.py  middlewares.py  pipelines.py  pydantic_models.py  settings.py
hiik_helper/pydantic_models/: article_corpus_model.py
hiik_helper/spiders/: hiik_default_spider.py  hiik_xml_spider.py
