[tool.poetry]
name = "hiik-helper"
version = "0.1.0"
description = ""
authors = ["Maximilian <Roth-Maximilian-Outpost@protonmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
scrapy = "^2.11.2"
openai = "^1.45.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
